(fix iotd archive images on safari)

--- a/src/app/features/explore/component/iotd-tp-archive-item/iotd-tp-archive-item.component.scss
+++ b/src/app/features/explore/component/iotd-tp-archive-item/iotd-tp-archive-item.component.scss
@@ -1,12 +1,22 @@
+@import "../../../../styles/breakpoints";
+
 :host {
   .iotd-tp-archive-item {
+    display: flex;
     position: relative;
 
     img {
-      width: 100%;
-      height: 250px;
+      min-height: 200px;
       transition: filter .25s ease-in-out;
+      flex: 1;
+      width: 100%;
+      display: block;
       object-fit: cover;
+
+      @media (min-width: $md-min) {
+        height: 250px;
+        width: auto;
+      }
 
       @media (hover: hover) and (pointer: fine) {
         &:hover {
